# co2-pricing

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.debug.yaml  docker-compose.dev.yaml  docker-compose.yaml  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/: pushJuliatoECR
.github/workflows/: 1-validate-cdk-pipelines.yaml  2-deploy-cdk-pipelines.yaml  cdk-pipelines.yaml  deploy-cdk-pipelines.yaml  pushApptoECR.yml  pushApptoECRandDevEKS.yml  pushApptoECRandProdEKS.yml  pushDatatoECR.yml  pushJuliatoECR.yml
__FILES__/databases/: optomised.yaml  raw.yaml
__FILES__/pipelines/: mimi_fund.yaml  mimi_give.yaml  noaa_carbon.yaml
__FILES__/static/: MimiFUND.csv  co2_trend_gl.csv
app/: .env.example  Dockerfile  README.md  api.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/data/: .dockerignore  Dockerfile  README.md  app.py  layer.json  noaa.py  pyproject.toml  requirements.txt
apps/data/__FILES__/: MimiFUND.csv
apps/data/fetch_csv/: handle.py
apps/data/load_csv/: load.py
apps/data/optimise_csv/: handle.py
apps/data/query_table/: query.py
apps/data/utils/: batch.py  parse.py
apps/mimi/: Dockerfile  Project.toml  bootstrap.jl  packages.jl  routes.jl
apps/mimiGIVE/: Dockerfile  Project.toml  packages.jl  routes.jl
apps/smartcontracts/: demo.sol
apps/web/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cdk/: .eslintrc.json  README.md  cdk.context.json  cdk.json  infra.ts  package.json  pnpm-lock.yaml  tsconfig.json
cdk/constructs/: SlsTable.ts  data-catalog.ts  glue-database.ts  pipeline.ts  query-api.ts  safe-bucket.ts  serverless-table.ts
cdk/stacks/: data-api-stack.ts  data-api.ts  datapipelines-stack.ts  web-app-stack.ts
cdk/utils/: io.ts  types.ts
julia/: routes.jl
julia/src/: MimiFUNDAPI.jl
k8s/ingress/: co2-pricing-ingress.yaml
nginx/: default.conf
pipelines/: cdk.json  jest.config.js  package.json
prisma/: schema.prisma
(+201 files in other folders)
