[tool.poetry]
name = "co2-pricing"
version = "0.1.0"
description = ""
authors = ["Felipe Mendonça <fysp11@gmail.com>"]
readme = "README.md"
packages = [{include = "co2_pricing"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.31"
awswrangler = { version = "^2.18.0", optional = true }

[tool.poetry.extras]
dev = ["awswrangler"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
