[tool.poetry]
name = "co2-pricing"
version = "0.1.0"
description = ""
authors = ["Felipe Mendonça <fysp11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flask = "^2.2.2"
flask-cors = "^3.0.10"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
